@startuml

title __RESOURCES's Class Diagram__\n

  namespace nl.han.oose.jellema.rick.resourcelayer {
    class nl.han.oose.jellema.rick.resourcelayer.LoginResource {
        + login()
        + setLoginService()
    }
  }
  

  namespace nl.han.oose.jellema.rick.resourcelayer {
    class nl.han.oose.jellema.rick.resourcelayer.PlaylistResource {
        + EditPlaylist()
        + addTrackToPlaylist()
        + createPlaylist()
        + deletePlaylist()
        + deleteTrackFromPlaylist()
        + getPlaylists()
        + getTracksOfPlaylist()
        + setPlayListService()
    }
  }
  

  namespace nl.han.oose.jellema.rick.resourcelayer {
    class nl.han.oose.jellema.rick.resourcelayer.TrackResource {
        + getTracks()
        + setTracksService()
    }
  }
  

  nl.han.oose.jellema.rick.resourcelayer.LoginResource o-- nl.han.oose.jellema.rick.resourcelayer.ILoginService : loginService
  nl.han.oose.jellema.rick.resourcelayer.PlaylistResource o-- nl.han.oose.jellema.rick.resourcelayer.IPlaylistService : playListService
  nl.han.oose.jellema.rick.resourcelayer.TrackResource o-- nl.han.oose.jellema.rick.resourcelayer.ITracksService : tracksService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
